# connected-component-labeling

./: .travis.yml  CMakeLists.txt  Dockerfile  README.md  data_handling.cpp  main.cpp  one_pass.cpp  two_pass.cpp
include/: common.h  data_handling.hpp  one_pass.hpp  two_pass.hpp
res/: 100x100.json
src/: CMakeLists.txt  data_handling.cpp  one_pass.cpp  two_pass.cpp
test/: CMakeLists.txt  algorithms.cpp  data_handling.cpp
